--- a/apps/web/public/games/pong/index.html
+++ b/apps/web/public/games/pong/index.html
@@ -64,7 +64,7 @@
       let gameInterval;
       let upPressed = false;
       let downPressed = false;
-      const gameSpeed = 16; // ~60fps
+      const gameSpeed = 16;
       const paddleSpeed = 6;
 
       document.addEventListener("keydown", (e) => {
@@ -99,7 +99,6 @@
         ballX += ballSpeedX;
         ballY += ballSpeedY;
 
-        // Player paddle movement
         if (upPressed && playerY > 0) {
           playerY -= paddleSpeed;
         }
@@ -107,24 +106,20 @@
           playerY += paddleSpeed;
         }
 
-        // Top and bottom wall collision
         if (ballY <= 0 || ballY >= canvas.height - ballSize) {
           ballSpeedY = -ballSpeedY;
         }
 
-        // Left wall collision (player missed)
         if (ballX <= 0) {
           endGame();
         }
 
-        // Right wall collision (AI missed)
         if (ballX >= canvas.width - ballSize) {
           score++;
           scoreDisplay.innerText = `Score: ${score}`;
           resetBall();
         }
 
-        // Player paddle collision
         if (ballX <= paddleWidth) {
           if (ballY > playerY && ballY < playerY + paddleHeight) {
             ballSpeedX = -ballSpeedX;
@@ -133,7 +128,6 @@
           }
         }
 
-        // AI paddle collision
         if (ballX >= canvas.width - paddleWidth * 2) {
           if (ballY > aiY && ballY < aiY + paddleHeight) {
             ballSpeedX = -ballSpeedX;
@@ -155,8 +149,8 @@
       function drawEverything() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-        drawPaddle(0, playerY); // Player left
-        drawPaddle(canvas.width - paddleWidth, aiY); // AI right
+        drawPaddle(0, playerY);
+        drawPaddle(canvas.width - paddleWidth, aiY);
         drawBall();
       }
 
@@ -174,14 +168,13 @@
         ballX = canvas.width / 2;
         ballY = canvas.height / 2;
 
-        // Start ball moving RIGHT initially
         ballSpeedX = 5;
         ballSpeedY = (Math.random() > 0.5 ? 1 : -1) * 3;
 
         score = 0;
         scoreDisplay.innerText = `Score: ${score}`;
 
-        gameLoop(); // Draw first frame
+        gameLoop();
         gameInterval = setInterval(gameLoop, gameSpeed);
       }
 
@@ -204,7 +197,7 @@
 
       async function submitScore(finalScore) {
         try {
-          const gameSlug = "pong"; // Hardcoded for this game
+          const gameSlug = "pong";
 
           const response = await fetch(
             `${window.location.origin}/api/submit-score`,
